[tool.poetry]
name = "sdss-lvmnps"
version = "0.4.0"
description = "A library and actor to communicate with an SDSS-V LVM network power switch"
authors = ["Florian Briegel <briegel@mpia.de>", "José Sánchez-Gallego <gallegoj@uw.edu>", "Changgon Kim <changgonkim@khu.ac.kr>", "Mingyeong Yang <mingyeong@khu.ac.kr>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/lvmnps"
repository = "https://github.com/sdss/lvmnps"
documentation = "https://lvmnps.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "lvmnps", from = "python" }
]
include = ["python/lvmnps/etc/*"]

[tool.poetry.scripts]
lvmnps = "lvmnps.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
sdsstools = "^1.0.0"
click-default-group = "^1.2.2"
sdss-clu = "^2.0.0"
httpx = "^0.18.1"
requests = ">2.20"

[tool.poetry.group.helpers.dependencies]
ipython = ">=7.11.0"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
isort = ">=4.3.21"
ipdb = ">=0.12.3"
rstcheck = ">=3.3.1"
black = ">=21.7b0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
coverage = {version = ">=5.0", extras = ["toml"]}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.1.2"
sphinx-jsonschema = ">=1.16.7"
myst-parser = ">=0.14.0"
furo = ">=2021.6.18-beta.36"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-copybutton = ">=0.3.3"
sphinx-click = ">=3.0.1"

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "lvmnps"
known_sdss = ["sdsstools", "clu"]
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.pytest.ini_options]
addopts = "--cov lvmnps --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
disable_warnings = ["include-ignored"]
omit = [
    "python/lvmnps/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
