[project]
name = "sdss-lvmnps"
version = "1.2.1"
description = "A library and actor to communicate with an SDSS-V LVM network power switch"
authors = [
    { name = "Florian Briegel", email = "briegel@mpia.de" },
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" },
    { name = "Changgon Kim", email = "changgonkim@khu.ac.kr" },
    { name = "Mingyeong Yang", email = "mingyeong@khu.ac.kr" }
]
license = "BSD-3-Clause"
readme = "README.md"

requires-python = ">=3.10,<4.0"

dependencies = [
    "sdsstools>=1.9.1",
    "click-default-group>=1.2.2",
    "sdss-clu>=2.4.3",
    "httpx>=0.28.1",
    "pydantic>=2.5.2",
    "lvmopstools>=0.5.18",

]

[project.urls]
Homepage = "https://github.com/sdss/lvmnps"
Repository = "https://github.com/sdss/lvmnps"
Documentation = "https://lvmnps.readthedocs.org"


[project.scripts]
lvmnps = "lvmnps.__main__:main"

[dependency-groups]
dev = [
    "ipython>=7.11.0",
    "ipdb>=0.12.3",
    "black>=21.7b0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "Sphinx>=7.0.0",
    "sphinx-jsonschema>=1.16.7",
    "myst-parser>=0.14.0",
    "furo>=2021.6.18",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.3.3",
    "sphinx-click>=3.0.1",
    "ruff>=0.1.0",
    "sphinx-autodoc-typehints>=1.25.2",
    "invoke>=2.2.0",
    "autodoc-pydantic>=2.0.1",
    "pytest-httpx>=0.27.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py313'

[tool.ruff.lint]
select = ["E", "F", "I"]
exclude = ["typings/"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["lvmnps"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "lvmopstools"]

[tool.pytest.ini_options]
addopts = "--cov lvmnps --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
disable_warnings = ["include-ignored"]
omit = [
    "src/lvmnps/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError()",
    "pass"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/lvmnps"]

[tool.hatch.build.targets.wheel]
packages = ["src/lvmnps"]
